<resources>
    <string name="app_name">Common</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="new_item">Add</string>
    <string name="templ_list">Template Lists</string>
    <string name="check_list">Check Lists</string>
    <string name="undo">Undo</string>
    <string name="delete_item">Delete</string>
    <string name="redo">Redo</string>
    <string name="show_all">Show All</string>
    <string name="add_item_done">Done</string>
    <string name="edit_item">Edit</string>
    <string name="title_activity_maps">Map</string>
    <string name="share_item">Share</string>
    <string name="select_item">Select items</string>
    <string name="contact_mgr">Contacts</string>
    <string name="start_month">Start Month</string>
    <string name="end_month">End Month</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string name="viewed"> Viewed first to</string>
    <string name="viewed2"> left</string>
    <string-array name="viewed_left">
    <item>Viewed first to </item>
        <item>Viewed last to </item>
    </string-array>

    <string-array name="viewed_right">
        <item> last </item>
        <item> first </item>
    </string-array>

    <string name="price"> Price high to</string>
    <string name="price2"> low </string>
    <string-array name="price_left">
        <item>Price high to </item>
        <item>Price low to </item>
    </string-array>

    <string-array name="price_right">
        <item> low </item>
        <item> high </item>
    </string-array>

    <string name="ratings"> Ratings high to</string>
    <string name="ratings2"> low </string>
    <string-array name="ratings_left">
        <item>Ratings high to </item>
        <item>Ratings low to </item>
    </string-array>

    <string-array name="ratings_right">
        <item> low </item>
        <item> high </item>
    </string-array>

    <string name="area"> Area high to</string>
    <string name="area2"> low </string>
    <string-array name="area_left">
        <item>Area high to </item>
        <item>Area low to </item>
    </string-array>

    <string-array name="area_right">
        <item> low </item>
        <item> high </item>
    </string-array>

    <string name="year"> Year new to</string>
    <string name="year2"> old </string>
    <string-array name="year_left">
        <item>Year new to </item>
        <item>Year old to </item>
    </string-array>

    <string-array name="year_right">
        <item> old </item>
        <item> new </item>
    </string-array>

    <string name="beds"> Beds high to</string>
    <string name="beds2"> low </string>
    <string-array name="beds_left">
        <item>Beds high to </item>
        <item>Beds low to </item>
    </string-array>

    <string-array name="beds_right">
        <item> low </item>
        <item> high </item>
    </string-array>

    <string name="baths"> Baths high to</string>
    <string name="baths2"> low </string>
    <string-array name="baths_left">
        <item>Baths high to </item>
        <item>Baths low to </item>
    </string-array>

    <string-array name="baths_right">
        <item> low </item>
        <item> high </item>
    </string-array>

    <string name="make"> Make A to</string>
    <string name="make2"> Z </string>
    <string-array name="make_left">
        <item>Make A to </item>
        <item>Make Z to </item>
    </string-array>

    <string-array name="make_right">
        <item> Z </item>
        <item> A </item>
    </string-array>

    <string name="model"> Model A to</string>
    <string name="model2"> Z </string>
    <string-array name="model_left">
        <item>Model A to </item>
        <item>Model Z to </item>
    </string-array>

    <string-array name="model_right">
        <item> Z </item>
        <item> A </item>
    </string-array>

    <string name="color"> Color A to</string>
    <string name="color2"> Z </string>
    <string-array name="color_left">
        <item>Color A to </item>
        <item>Color Z to </item>
    </string-array>

    <string-array name="color_right">
        <item> Z </item>
        <item> A </item>
    </string-array>


</resources>
