<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rekhaninan.autospree.MainActivity">
    <item
        android:id="@+id/add_item"
        android:orderInCategory="100"
        android:icon="@drawable/ic_add_black_48dp"
        android:title="@string/new_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/templ_list_view"
        android:orderInCategory="100"
        android:icon="@drawable/ic_list_black_48dp"
        android:title="@string/templ_list"
        app:showAsAction="always" />

    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_folder_shared_black_48dp"
        android:title="@string/share_item"
        app:showAsAction="always" />
</menu>

