<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<item
    android:id="@+id/add_item"
    android:orderInCategory="100"
    android:icon="@drawable/ic_add_black_48dp"
    android:title="@string/new_item"
    app:showAsAction="ifRoom" />
    <item
        android:id="@+id/check_list_view"
        android:orderInCategory="100"
        android:icon="@drawable/ic_list_black_48dp"
        android:title="@string/check_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:icon="@drawable/ic_folder_shared_black_48dp"
        android:title="@string/share_item"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort"
        android:orderInCategory="100"
        android:icon="@drawable/ic_sort_black_48dp"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    </menu>
